# arate-limit

./: README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci.yml  release.yml
src/arate_limit/: __init__.py
tests/: test_arate_limit.py
